[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sas-auto"
version = "0.1.0"
description = "Safe, resumable KMZ-to-SAS.Planet workflow for Windows"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2,<7",
  "pywinauto>=0.6.9,<0.7",
  "PyAutoGUI>=0.9.54,<1",
  "Pillow>=11.0,<13",
]

[project.scripts]
sas-auto = "sas_auto.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "gui: tests that launch or control Windows GUI applications",
]
