[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sas-auto"
version = "0.4.0"
description = "KMZ polygon-to-SAS.Planet download and georeferenced raster export automation for Windows"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2,<7",
  "Pillow>=12.0,<13",
]

[dependency-groups]
dev = [
  "mypy>=2.3,<3",
  "pytest>=9.1,<10",
  "ruff>=0.15.22,<0.16",
  "types-PyYAML>=6.0.12,<7",
  "yamllint>=1.38,<2",
]

[project.scripts]
sas-auto = "sas_auto.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  ".venv",
  "generated",
  "logs",
  "output",
  "state",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "C4", "PIE", "RUF", "SIM"]
allowed-confusables = ["а", "г"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
